--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,12 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+flask = "*"
+psycopg2 = "*"
+psycopg2-binary = "*"
 gunicorn = "*"
+email-validator = "*"
+pillow = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.8.5"
